...
  left_home: "I've left home",
  left_stay: "I've left the hotel",
  at_airport: "I'm at the airport",
  checked_in: "I've checked in",
  bag_dropped: 'Bags are dropped',
  security: "I'm through security",
  immigration: "I'm through immigration",
  boarded: "I'm on board",
  departed: "We've taken off",
  landed: "We've landed",
  arrival_immigration: "I'm through immigration",
  bags_collected: 'I have my bags',
  bags_rechecked: 'Bags are re-checked',
...
